--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
 
     <main>
 
+
       <ul class="nav nav-tabs mt-3 ms-3" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="default-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Tutor Info</button>
@@ -264,6 +265,10 @@
 
               <div class="" id="recommended">
                 Nothing for now...
+              </div>
+
+              <div class="" id="recommended2">
+
               </div>
             </div>
 
