--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
           </form>
 		
-	<div class="col-md-6">
+	<div class="col-md-6 mt-2">
                 <label for="subject" class="form-label">Change Language</label>
                 <select class="form-select" id="subject" required>
                   <option value="">Language</option>
