--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		
 	<div class="col-md-6 mt-2">
                 <label for="subject" class="form-label">Change Language</label>
-                <select class="form-select" id="subject" required>
+                <select class="form-select" required>
                   <option value="">Language</option>
                   <option>English</option>
                   <option>普通话</option>
