--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <li><a href="#" class="text">Home</a></li>
                 <li><a href="#" class="text">Settings</a></li>
                 <li><a href="#" class="text">My Profile</a></li>
-                <li><a href="#" class="text">Sign Out</a></li>
+                <li><a href="https://i44917861.wixsite.com/tutorntutee" class="text">Sign Out</a></li>
               </ul>
             </div>
           </div>
